# DietTrace

./: .env.example  .gitignore  DEVPOST.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
frontend/: Dockerfile  package-lock.json  package.json  vitest.config.mts
scripts/: demo_regression.py  demo_walkthrough.py  harden_scoping.py  measure_resolution.py  probe_personas.py  run_experiment.py  run_supervisor.py  smoke_learning_loop.py  validate_bodybuilder.py
src/dietrace/: __init__.py  demo.py
terraform/: main.tf
tests/: conftest.py  test_demo_regression.py  test_demo_script.py  test_devpost.py  test_infra.py  test_readme.py  test_smoke.py
tests/evals/: test_ab_runner.py  test_dataset.py  test_evaluators.py  test_macro_dataset.py  test_macro_evaluators.py  test_macro_schema.py  test_online.py  test_runner.py  test_schema.py  test_span_annotation.py  test_span_eval.py  test_uploader.py
tests/llm/: test_config.py
tests/macros/: test_adherence.py  test_clamp_eval_consistency.py  test_compute.py  test_compute_floor.py  test_eval.py  test_models_validation.py  test_personalize.py  test_preference.py  test_presets.py
tests/nutrition/: conftest.py  fixtures_food_db.py  test_fixture_db.py  test_models.py  test_overlay.py  test_repository.py  test_repository_search.py  test_search_resolution_regression.py
tests/observability/: test_phoenix.py  test_trace_buffer.py
tests/web/: conftest.py  test_accuracy.py  test_accuracy_base_cache.py  test_accuracy_macros.py  test_accuracy_macros_measured.py  test_api_client.py  test_app.py  test_feedback.py  (+24 more)
(+213 files in other folders)
