[project]
name = "dietrace"
version = "0.1.0"
description = "AI nutrition agent that logs food from natural language, scored for accuracy with Arize Phoenix evals and a self-supervising prompt-fix loop."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Colin Hwang" }]

dependencies = [
    "google-adk>=1.0.0",
    "google-genai>=1.0.0",
    "arize-phoenix-otel>=0.6.0",
    "opentelemetry-sdk>=1.20.0",
    "arize-phoenix-client>=0.1.0",
    "openinference-instrumentation-google-adk>=0.1.0",
    "openinference-instrumentation-google-genai>=0.1.0",
    "openinference-instrumentation-mcp>=0.1.0",
    "mcp>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "responses>=0.25.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dietrace"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "A"]
